# Do_it

./: .flake8  .gitignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
Core/: settings.py  urls.py
blog/: models.py  urls.py  views.py
blog/templates/blog/: index.html  single_page_post.html
